--- a/config/.env
+++ b/config/.env
@@ -19,6 +19,8 @@ CONDA_MD5=8c69f65a4ae27fb41df0fe552b4a8a3b
 # PY_VER=3.6
 # CONDA_MD5=a946ea1d0c4a642ddf0c3a26a18bb16d
 
+IMAGE_PLATFORM=linux/amd64
+# IMAGE_PLATFORM=linux/arm64/v8
 
 
 
