--- a/config/.env
+++ b/config/.env
@@ -19,15 +19,21 @@ CONDA_MD5=8c69f65a4ae27fb41df0fe552b4a8a3b
 # PY_VER=3.6
 # CONDA_MD5=a946ea1d0c4a642ddf0c3a26a18bb16d
 
-
-
+# docker run --rm --privileged aptman/qus -s -- -p # register arch targets
+# docker buildx create --name remote_builder --platform linux/arm64,linux/arm/v8 # create a new buildx agent
+# docker buildx use remote_builder # select it
+# docker buildx inspect --bootstrap # start it
 
 ## test
 
+# PLATFORM=linux/amd64
+# PLATFORM=linux/arm64/v8
+PLATFORM=linux/arm64
+
 HOST_UID=1000
 
-DISTRO=alpine
-PACKAGE_MANAGER=apk
+# DISTRO=alpine
+# PACKAGE_MANAGER=apk
 
-# DISTRO=debian
-# PACKAGE_MANAGER=apt
+DISTRO=debian
+PACKAGE_MANAGER=apt
