--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -84,6 +84,9 @@ jobs:
         run: |
           PLATFORM_TAG=$(echo "$PLATFORM" | tr '/' '_')
           echo "PLATFORM_TAG=${PLATFORM_TAG}" >> $GITHUB_ENV
+      - uses: dbhi/qus/action@main
+        with:
+          targets: aarch64
       - name: Compile image
         run: |
           docker buildx bake -f dist/${DISTRO}/docker-compose.yaml \
@@ -186,6 +189,9 @@ jobs:
           name: >
             ${{format('{0}-py{1}-{2}-{3}', matrix.conda_ver, matrix.py_ver, matrix.distro,
                       env.PLATFORM_TAG)}}
+      - uses: dbhi/qus/action@main
+        with:
+          targets: aarch64
       - name: Run integration tests
         run: |
           export HOST_UID=$(id -u)
