--- a/config/.env
+++ b/config/.env
@@ -1,9 +1,9 @@
 ## build
 
-CONDA_VER=4.10.3
-PY_VER=3.9
-PY_LABEL=py39_
-CONDA_MD5=8c69f65a4ae27fb41df0fe552b4a8a3b
+# CONDA_VER=4.10.3
+# PY_VER=3.9
+# PY_LABEL=py39_
+# CONDA_MD5=8c69f65a4ae27fb41df0fe552b4a8a3b
 
 # CONDA_VER=4.10.3
 # PY_VER=3.8
@@ -15,9 +15,9 @@ CONDA_MD5=8c69f65a4ae27fb41df0fe552b4a8a3b
 # PY_LABEL=py37_
 # CONDA_MD5=9f186c1d86c266acc47dbc1603f0e2ed
 
-# CONDA_VER=4.5.4
-# PY_VER=3.6
-# CONDA_MD5=a946ea1d0c4a642ddf0c3a26a18bb16d
+CONDA_VER=4.5.4
+PY_VER=3.6
+CONDA_MD5=a946ea1d0c4a642ddf0c3a26a18bb16d
 
 # docker run --rm --privileged aptman/qus -s -- -p # register arch targets
 # docker buildx create --name remote_builder --platform linux/arm64,linux/arm/v8 # create a new buildx agent
