--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -65,10 +65,10 @@ jobs:
             py_ver: 3.7
             platform: linux/arm64/v8
             py_label: py37_
-          - distro: debian
-            conda_ver: 4.5.4
-            py_ver: 3.6
-            platform: linux/arm64/v8
+          # - distro: debian
+          #   conda_ver: 4.5.4
+          #   py_ver: 3.6
+          #   platform: linux/arm64/v8
     env:
       DISTRO: ${{matrix.distro}}
       CONDA_VER: ${{matrix.conda_ver}}
@@ -181,11 +181,11 @@ jobs:
             py_ver: 3.7
             platform: linux/arm64/v8
             package_manager: apt
-          - distro: debian
-            conda_ver: 4.5.4
-            py_ver: 3.6
-            platform: linux/arm64/v8
-            package_manager: apt
+          # - distro: debian
+          #   conda_ver: 4.5.4
+          #   py_ver: 3.6
+          #   platform: linux/arm64/v8
+          #   package_manager: apt
     env:
       DISTRO: ${{matrix.distro}}
       CONDA_VER: ${{matrix.conda_ver}}
@@ -263,10 +263,10 @@ jobs:
             conda_ver: 4.10.3
             py_ver: 3.7
             platform: linux/arm64/v8
-          - distro: debian
-            conda_ver: 4.5.4
-            py_ver: 3.6
-            platform: linux/arm64/v8
+          # - distro: debian
+          #   conda_ver: 4.5.4
+          #   py_ver: 3.6
+          #   platform: linux/arm64/v8
     env:
       DISTRO: ${{matrix.distro}}
       CONDA_VER: ${{matrix.conda_ver}}
